# open_nd

./: Cargo.toml  README.md
docs/: act_types.md  avf.md  ciftree.md  his.md  scene_files.md
src/: avf.rs  avf_encoder.rs  ciftree.rs  extractor.rs  gui.rs  his.rs  his_encoder.rs  scene.rs
src/backend/: avf_backend.rs  ciftree_backend.rs  his_backend.rs
src/frontend/: avf_frontend.rs  ciftree_frontend.rs  his_frontend.rs
src/lib/: byte_reader.rs  export_png.rs  image.rs  lzss.rs  lzss_encode.rs  rgb.rs
